[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'serde/std',
    'serde_json/std',
]
