[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"

[dependencies]
pebbles-game-io = { path = "./io" }
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.4.1" }
[workspace]
members = [
    "io",
    ".",
]
