[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
