[workspace]

members = ["client"]


[package]
name = "trs"
version = "0.1.0"
edition = "2021"

[dependencies]
trs-app = { path = "app" }

[build-dependencies]
trs-app = { path = "app" }
sails-rs = { version = "0.4.0", features = ["wasm-builder"] }
sails-idl-gen = "0.4.0"

[dev-dependencies]
trs = { path = ".", features = ["wasm-binary"] }
trs-client = { path = "client" }
sails-rs = { version = "0.4.0", features = ["gtest"] }
tokio = { version = "1.39", features = ["rt", "macros"] }

[features]
wasm-binary = []
