[package]
name = "trs_token"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
trs_token_io = { path = "./io" }  
trs_token_io.workspace = true
gstd.workspace = true
gmeta.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true

[build-dependencies]
trs_token_io.workspace = true
gear-wasm-builder.workspace = true