[package]
name = "trs_token"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
trs_token_io = { path = "io" }
gstd.workspace = true
gmeta.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true

[build-dependencies]
trs_token_io.workspace = true
gear-wasm-builder.workspace = true