[package]
name = "trs_token_state"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
trs_token_io.workspace = true
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }